--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ split-file-reader = "^0.1.4"
 statannotations = "^0.5.0"
 joblib = "^1.3.1"
 tqdm = "^4.65.0"
+torch = "^2.0.1"
+torchvision = "^0.15.2"
+torchaudio = "^2.0.2"
+plotly = "^5.16.1"
 
 [build-system]
 requires = ["poetry-core"]
