--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,6 @@ temp/
 # key files anywhere in the project directory and subfolders
 **/*.key
 # data files anywhere in the project directory and subfolders
-**/data/*
+**/data/*/
 # unprotected zip files anywhere in the project directory and subfolders
 **/*.zip
